--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body> 
 
     <header>
-        <h1>Pankaj's To-DO List</h1>
+        <h1>To-DO List</h1>
     </header>
     <form>
         <input type="text" class="todo-input">
